# PP1-NEODELFOS-2025

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
ETL/Normalización/: avance_ush.pbix
ETL/Transformación y Limpieza/: ETL_Consolidado_IPC.pbix  ETL_Consolidado_IPC_ nuevo.pbix  ETL_Final_Gráficos.pbix  ETL_rg_procesado.pbix  ETL_ush_procesado.pbix
data/interim/: avance_rg.ipynb  avance_rg.txt
data/processed/: ETL_rg_procesado.pbix  ETL_ush_procesado.pbix  datos_consolidados.csv  rg_datos_procesados.csv  ush_datos_procesados.csv
data/processed/obsoleto/: avance_rg.pbix  avance_rg_1.0.pbix
data/raw/: RIO GRANDE MARZO 2025.xlsx  USHUAIA ABRIL 2025.xlsx
data/raw/rg/: RIO GRANDE ENERO 2025.xlsx
data/raw/ush/: USHUAIA ENERO 2025.xlsx  USHUAIA FEBRERO 2025.xlsx  USHUAIA MARZO 2025.xlsx
plantilla_ETL/: README.md  readme.md  requirements.txt
plantilla_ETL/Datos/: consolidacion_rg.py  conversion_datos_2024_RG.py  conversion_datos_2025_RG.py  filtro_rg
plantilla_ETL/Datos/Crudos/: RIO GRANDE ABRIL 2025.xlsx
plantilla_ETL/Datos/WIP/: semana7cs.pbix
plantilla_ETL/Informes/: Version 1.0.txt
