[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ETL"
version = "0.0.1"
description = "Plantilla ETL realizada con Cookiecutter"
authors = [
  { name = "Federico Guti\u00e9rrez Clas" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["ETL"]
include = ["pyproject.toml", "ETL/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ETL"]
force-sort-within-sections = true

